--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Название страницы</title>
-<link rel='stylesheet' href='/CSS/index.css' type='text/css'>
+<link rel='stylesheet' href='index.css' type='text/css'>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
@@ -26,7 +26,7 @@
         </div>
     </div>
 </body>
-<script src="/JS/videos.js"></script>
-<script src="/JS/main.js"></script>
+<script src="videos.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
