--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class='video-icons-wrapper'>
             <div class='first-video video-img' data-duration="7228.604082" data-src="newVideo2.mp4"></div>
-            <div class='second-video video-img' data-duration="3703.141587" data-src="newVideo.mp4"></div>
+            <div class='second-video video-img' data-duration="97" data-src="y2mate.com - ASMR АСМР_ Шелест листвы в осеннем лесу. The rustle of leaves in the autumn forest._480p.mp4"></div>
         </div>
     </div>
 </body>
