--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <video class='video'  src='newVideo.mp4'></video>
     <div class='wrapper'>
         <div class='time-btns'>
-            <div class='time-btn' data-min="10">10 Minutes</div>
-            <div class='time-btn' data-min="30">30 Minutes</div>
-            <div class='time-btn' data-min="50">50 Minutes</div>
+            <div class='time-btn' data-sec="10">10 Minutes</div>
+            <div class='time-btn' data-sec="30">30 Minutes</div>
+            <div class='time-btn' data-sec="50">50 Minutes</div>
         </div>
         <div class='circle-bar-play'>
             <img src='play.png' class='play-img'>
