--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <video class='video'  src='newVideo.mp4'></video>
+    <video class='video'  src='y2mate.com - ASMR АСМР_ Шелест листвы в осеннем лесу. The rustle of leaves in the autumn forest._480p.mp4'></video>
     <div class='wrapper'>
         <div class='time-btns'>
             <div class='time-btn' data-sec="10">10 Seconds</div>
@@ -22,7 +22,7 @@
         </div>
         <div class='video-icons-wrapper'>
             <div class='first-video video-img' data-duration="244" data-src="y2mate.com - Успокаивающие звуки природы для релаксации!_360p"></div>
-            <div class='second-video video-img' data-duration="97.2972972972973" data-src="y2mate.com - ASMR АСМР_ Шелест листвы в осеннем лесу. The rustle of leaves in the autumn forest._480p.mp4"></div>
+            <div class='second-video video-img' data-duration="97" data-src="y2mate.com - ASMR АСМР_ Шелест листвы в осеннем лесу. The rustle of leaves in the autumn forest._480p.mp4"></div>
         </div>
     </div>
 </body>
